Fix horizontal scroll issue with navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ header {
     clear: left;
     font-size: 120%;
     bottom: 0;
+    overflow-x: hidden;
 }
 
 #navbar li {
